Fix: fix CSS so that in game messages do not overflow their container

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ h1, p {
 }
 
 #answer-container p {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .answer-button {
